auth part 1 bugs fixed
